@@ -190,7 +190,7 @@
           <instructions>
             <Export-Package>!*.internal,!*.impl,!*.internal.*,!*.impl.*,!.,org.pustefixframework.*,de.schlund.*</Export-Package>
             <Embed-Dependency>saxon,saxon-dom,saxon-xpath</Embed-Dependency>
-            <Import-Package>!com.saxonica.validate,!com.sun.mirror.*,org.apache.log4j,!org.apache.log4j.*,*</Import-Package>
+            <Import-Package>!com.saxonica.validate,!com.sun.mirror.*,org.apache.log4j,!org.apache.log4j.*,*,net.sf.cglib.core,net.sf.cglib.proxy,net.sf.cglib.reflect</Import-Package>
 <!--
             <Private-Package>org.pustefixframework.*</Private-Package>
             <Bundle-Activator>org.pustefixframework.osgi.internal.Activator</Bundle-Activator>
