@@ -1,0 +1,104 @@
+/*
+ * Copyright 2002-2008 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * 
+ * This is a modified version of the original class using a different
+ * class loader.
+ */
+
+package org.pustefixframework.container.spring.beans.support;
+
+import org.springframework.aop.framework.autoproxy.AutoProxyUtils;
+import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.beans.factory.config.BeanDefinitionHolder;
+import org.springframework.beans.factory.support.AbstractBeanDefinition;
+import org.springframework.beans.factory.support.BeanDefinitionRegistry;
+import org.springframework.beans.factory.support.RootBeanDefinition;
+
+/**
+ * Utility class for creating a scoped proxy.
+ * Used by ScopedProxyBeanDefinitionDecorator and ClassPathBeanDefinitionScanner.
+ *
+ * @author Mark Fisher
+ * @author Juergen Hoeller
+ * @author Rob Harrop
+ * @since 2.5
+ */
+public abstract class ScopedProxyUtils {
+
+    private static final String TARGET_NAME_PREFIX = "scopedTarget.";
+
+
+    /**
+     * Generates a scoped proxy for the supplied target bean, registering the target
+     * bean with an internal name and setting 'targetBeanName' on the scoped proxy.
+     * @param definition the original bean definition
+     * @param registry the bean definition registry
+     * @param proxyTargetClass whether to create a target class proxy
+     * @return the scoped proxy definition
+     */
+    public static BeanDefinitionHolder createScopedProxy(BeanDefinitionHolder definition,
+            BeanDefinitionRegistry registry, boolean proxyTargetClass) {
+        
+        String originalBeanName = definition.getBeanName();
+        BeanDefinition targetDefinition = definition.getBeanDefinition();
+
+        // Create a scoped proxy definition for the original bean name,
+        // "hiding" the target bean in an internal target definition.
+        RootBeanDefinition scopedProxyDefinition = new RootBeanDefinition(ScopedProxyFactoryBean.class);
+        scopedProxyDefinition.setOriginatingBeanDefinition(definition.getBeanDefinition());
+        scopedProxyDefinition.setSource(definition.getSource());
+        scopedProxyDefinition.setRole(BeanDefinition.ROLE_INFRASTRUCTURE);
+        
+        String targetBeanName = getTargetBeanName(originalBeanName);
+        scopedProxyDefinition.getPropertyValues().addPropertyValue("targetBeanName", targetBeanName);
+        ClassLoader beanClassLoader = null;
+        if (definition.getBeanDefinition() instanceof AbstractBeanDefinition) {
+            AbstractBeanDefinition beanDefinition = (AbstractBeanDefinition) definition.getBeanDefinition();
+            if (beanDefinition.getBeanClass() != null) {
+                beanClassLoader = beanDefinition.getBeanClass().getClassLoader();
+            }
+        }
+        scopedProxyDefinition.getPropertyValues().addPropertyValue("beanClassLoader", beanClassLoader);
+
+        if (proxyTargetClass) {
+            targetDefinition.setAttribute(AutoProxyUtils.PRESERVE_TARGET_CLASS_ATTRIBUTE, Boolean.TRUE);
+            // ScopedFactoryBean's "proxyTargetClass" default is TRUE, so we don't need to set it explicitly here.
+        }
+        else {
+            scopedProxyDefinition.getPropertyValues().addPropertyValue("proxyTargetClass", Boolean.FALSE);
+        }
+
+        scopedProxyDefinition.setAutowireCandidate(targetDefinition.isAutowireCandidate());
+        // The target bean should be ignored in favor of the scoped proxy.
+        targetDefinition.setAutowireCandidate(false);
+
+        // Register the target bean as separate bean in the factory.
+        registry.registerBeanDefinition(targetBeanName, targetDefinition);
+
+        // Return the scoped proxy definition as primary bean definition
+        // (potentially an inner bean).
+        return new BeanDefinitionHolder(scopedProxyDefinition, originalBeanName, definition.getAliases());
+    }
+    
+    /**
+     * Generates the bean name that is used within the scoped proxy to reference the target bean.
+     * @param originalBeanName the original name of bean
+     * @return the generated bean to be used to reference the target bean
+     */
+    public static String getTargetBeanName(String originalBeanName) {
+        return TARGET_NAME_PREFIX + originalBeanName;
+    }
+
+}
